--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: cpp
 os: linux
-dist: bionic
+dist: focal
 
 jobs:
   include:
@@ -12,7 +12,7 @@ jobs:
         - g++-10
         - autotools-dev
     script:
-    - export "CXX=g++-10"; ./configure --disable-lto && make check && make install
+    - export "CXX=g++-10"; ./configure --disable-lto && make check && sudo make install
   - addons:
       apt:
         sources:
@@ -21,6 +21,6 @@ jobs:
         - autotools-dev
         update: true
     before_install:
-    - wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo ./llvm.sh 10
+    - wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && sudo ./llvm.sh 11
     script:
-    - export "CXX=clang++-10"; ./configure --disable-lto && make check && make install
+    - export "CXX=clang++-11"; ./configure --disable-lto && make check && sudo make install
